added untested conversion functions euler->angular vel/acc

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -74,6 +74,7 @@ add_library(${MOTION_OPT_LIB}
   # body motion
   src/polynomial.cc
   src/spline.cc
+  src/angular_state_converter.cc
 #  src/base_motion.cc
   src/polynomial_spline.cc
   src/linear_spline_equations.cc
