--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -96,8 +96,8 @@ add_library(${MOTION_OPT_LIB}
   #src/ee_phase_motion.cc
   #src/ee_motion.cc
   #src/endeffectors_motion.cc
-  src/endeffectors_force.cc
-  src/ee_force.cc
+#  src/endeffectors_force.cc
+#  src/ee_force.cc
   src/contact_schedule.cc
   # system dynamics
   src/dynamic_model.cc
