--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -91,6 +91,7 @@ add_library(${MOTION_OPT_LIB}
   src/angular_state_converter.cc
 #  src/base_motion.cc
   src/polynomial_spline.cc
+  src/contact_timings.cc
   src/linear_spline_equations.cc
   src/polynomial_cost.cc
   # endeffector motion
