--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -93,8 +93,11 @@ add_library(${MOTION_OPT_LIB}
   src/angular_state_converter.cc
 #  src/base_motion.cc
   src/polynomial_spline.cc
-  src/linear_spline_equations.cc
-  src/polynomial_cost.cc
+  
+  # these could go back in sometime
+#  src/linear_spline_equations.cc
+#  src/polynomial_cost.cc
+
   # endeffector motion
   #src/ee_phase_motion.cc
   #src/ee_motion.cc
