added optimization variable NodeValues for Hermite Spline

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -89,6 +89,7 @@ add_library(${MOTION_OPT_LIB}
 #  src/contact_timings.cc
   # body motion
   src/polynomial.cc
+  src/node_values.cc
   src/spline.cc
 #  src/spline.cc
   src/angular_state_converter.cc
