separated phase nodes from node values

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -90,6 +90,7 @@ add_library(${MOTION_OPT_LIB}
   # body motion
   src/polynomial.cc
   src/node_values.cc
+  src/phase_nodes.cc
   src/spline.cc
   src/coeff_spline.cc
 #  src/spline.cc
