--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -87,6 +87,7 @@ add_library(${MOTION_OPT_LIB}
   src/soft_constraint.cc
   src/time_discretization_constraint.cc
   src/terrain_constraint.cc
+  src/height_map.cc
 #  src/contact_constraints.cc
 #  src/contact_timings.cc
   # body motion
