--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -86,8 +86,9 @@ add_library(${MOTION_OPT_LIB}
   src/cost_constraint_factory.cc
   src/soft_constraint.cc
   src/time_discretization_constraint.cc
-  src/terrain_constraint.cc
   src/height_map.cc
+  src/terrain_constraint.cc
+  src/swing_constraint.cc
 #  src/contact_constraints.cc
 #  src/contact_timings.cc
   # body motion
