added skeleton for friction coefficient

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -89,6 +89,7 @@ add_library(${MOTION_OPT_LIB}
   src/height_map.cc
   src/terrain_constraint.cc
   src/swing_constraint.cc
+  src/force_constraint.cc
 #  src/contact_constraints.cc
 #  src/contact_timings.cc
   # body motion
