added possibility to specify gaits directly, made opt. params robot independent

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -90,6 +90,7 @@ add_library(${MOTION_OPT_LIB}
   src/terrain_constraint.cc
   src/swing_constraint.cc
   src/force_constraint.cc
+  src/quadruped_gait_generator.cc
 #  src/contact_constraints.cc
 #  src/contact_timings.cc
   # body motion
