--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -92,6 +92,8 @@ add_library(${MOTION_OPT_LIB}
   src/force_constraint.cc
   #
   src/gait_generator.cc
+  src/monoped_gait_generator.cc
+  src/biped_gait_generator.cc
   src/quadruped_gait_generator.cc
 #  src/contact_constraints.cc
 #  src/contact_timings.cc
