Added constraint that keeps 6D base in specific range.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -86,6 +86,7 @@ add_library(${MOTION_OPT_LIB}
   src/cost_constraint_factory.cc
   src/soft_constraint.cc
   src/time_discretization_constraint.cc
+  src/base_motion_constraint.cc
   src/height_map.cc
   src/terrain_constraint.cc
   src/swing_constraint.cc
