--- a/package.xml
+++ b/package.xml
@@ -40,5 +40,12 @@
   <!-- Use test_depend for packages you need only for testing: -->
   <!--   <test_depend>gtest</test_depend> -->
   <buildtool_depend>catkin</buildtool_depend>
+  
+  <build_depend>xpp_states</build_depend>
+  <run_depend>xpp_states</run_depend>
+  
+  <!-- remove this at some point -->
+  <build_depend>kindr</build_depend>
+  <run_depend>kindr</run_depend>
     
 </package>
