renamed repos to show connection to xpp_opt

--- a/config/xpp.conf
+++ b/config/xpp.conf
@@ -1,4 +1,3 @@
 # Set the default ros output to warning and higher
 log4j.logger.ros=INFO
-# Override my package to output everything
-#log4j.logger.ros.my_package_name=DEBUG
+# DEBUG
