--- a/xpp_opt/package.xml
+++ b/xpp_opt/package.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0"?>
-<package>
+<package format="2">
   <name>xpp_opt</name>
   <version>0.0.0</version>
   <description>Optimizing motions for floating base systems</description>
@@ -41,8 +41,8 @@
   <!--   <test_depend>gtest</test_depend> -->
   <buildtool_depend>catkin</buildtool_depend>
   
-  <build_depend>xpp_states</build_depend>
-  <run_depend>xpp_states</run_depend>
+  <depend>xpp_states</depend>
+  <depend>xpp_solve</depend>
   
     
 </package>
