--- a/xpp_solve/CMakeLists.txt
+++ b/xpp_solve/CMakeLists.txt
@@ -1,26 +1,35 @@
 cmake_minimum_required(VERSION 2.8.3)
 project(xpp_solve)
 
-## Compile as C++11, supported in ROS Kinetic and newer
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wfatal-errors -std=c++11")
-# add_compile_options(-std=c++11)
 
-## Find catkin macros and libraries
-## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
-## is used, also find other catkin packages
 find_package(catkin REQUIRED)
-
 find_package(Eigen3 REQUIRED)
 
-# NLP solvers (adapt global path accordingly)
-set(CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake" ${CMAKE_MODULE_PATH})
-find_package(IPOPT REQUIRED)
-option(BUILD_SNOPT "Build problem to solve with snopt nlp solver" ON)
-if(BUILD_SNOPT)
-  set(SNOPT_SRC_DIR "/home/winklera/3rd_party_software/snopt_lib")
-  set(SNOPT_INCLUDE_DIRS ${SNOPT_SRC_DIR}/include)
-  set(SNOPT_LIBRARIES ${SNOPT_SRC_DIR}/lib/libsnopt7_cpp.so ${SNOPT_SRC_DIR}/lib/libsnopt7.so) # must be absolute path
-endif(BUILD_SNOPT)
+
+## check for which solver the interface should be compiled. This is determined
+## from weather the environmental variable is set in the ~/.bashrc, e.g.
+## export IPOPT_DIR=/home/path/to/ipopt/Ipopt-3.12.4
+## export SNOPT_DIR=/home/path/to/snopt/snopt_lib
+if(NOT DEFINED ENV{IPOPT_DIR})
+  message(STATUS "IPOPT_DIR not set. Not compiling for IPOPT")
+else()
+  message(STATUS "IPOPT_DIR set. Compiling with IPOPT.")
+  set(IPOPT_INCLUDE_DIRS $ENV{IPOPT_DIR}/build/include/coin)
+  set(IPOPT_LIBRARIES    $ENV{IPOPT_DIR}/build/lib/libipopt.so)
+  SET(IPOPT_ADAPTER_LIB xpp_ipopt)
+endif()
+
+if(NOT DEFINED ENV{SNOPT_DIR})
+  message(STATUS "SNOPT_DIR not set. Not compiling for SNOPT")
+else()
+  message(STATUS "SNOPT_DIR set. Compiling with SNOPT.")
+  set(SNOPT_INCLUDE_DIRS $ENV{SNOPT_DIR}/include)
+  set(SNOPT_LIBRARIES $ENV{SNOPT_DIR}/lib/libsnopt7_cpp.so 
+                      $ENV{SNOPT_DIR}/lib/libsnopt7.so)
+  SET(SNOPT_ADAPTER_LIB xpp_snopt)
+endif()
+
 
 
 
@@ -34,10 +43,17 @@ endif(BUILD_SNOPT)
 ## CATKIN_DEPENDS: catkin_packages dependent projects also need
 ## DEPENDS: system dependencies of this project that dependent projects also need
 catkin_package(
-   INCLUDE_DIRS include ${EIGEN3_INCLUDE_DIR} ${IPOPT_INCLUDE_DIRS} ${SNOPT_INCLUDE_DIRS}
-   LIBRARIES ${PROJECT_NAME} ${IPOPT_LIBRARIES} ${SNOPT_LIBRARIES}
+   INCLUDE_DIRS include 
+                ${EIGEN3_INCLUDE_DIR} 
+                ${IPOPT_INCLUDE_DIRS} 
+                ${SNOPT_INCLUDE_DIRS}
+   LIBRARIES ${PROJECT_NAME}
+             ${IPOPT_ADAPTER_LIB}
+             ${SNOPT_ADAPTER_LIB}
+             ${IPOPT_LIBRARIES} 
+             ${SNOPT_LIBRARIES}
 #  CATKIN_DEPENDS other_catkin_pkg
-#  DEPENDS system_lib
+#  DEPENDS
 )
 
 ###########
@@ -53,80 +69,50 @@ include_directories(
   ${SNOPT_INCLUDE_DIRS}
 )
 
-# Declare a C++ library
+# The solver independent part of the library
 add_library(${PROJECT_NAME}
   src/nlp.cc
   src/composite.cc
   src/linear_constraint.cc
   src/soft_constraint.cc
-  src/ipopt_adapter.cc
-  src/snopt_adapter.cc
 )
 
-target_link_libraries(${PROJECT_NAME}
-  ${IPOPT_LIBRARIES}
-  ${SNOPT_LIBRARIES}
-)
+# compile adapter for IPOPT 
+if(DEFINED ENV{IPOPT_DIR})
+  add_library(${IPOPT_ADAPTER_LIB}
+    src/ipopt_adapter.cc
+  )
+endif()
 
-## Add cmake target dependencies of the library
-## as an example, code may need to be generated before libraries
-## either from message generation or dynamic reconfigure
-# add_dependencies(${PROJECT_NAME} ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
+# compile adapter for SNOPT 
+if(DEFINED ENV{SNOPT_DIR})
+  add_library(${SNOPT_ADAPTER_LIB}
+    src/snopt_adapter.cc
+  )
+endif()
 
-## Declare a C++ executable
-## With catkin_make all packages are built within a single CMake context
-## The recommended prefix ensures that target names across packages don't collide
-# add_executable(${PROJECT_NAME}_node src/xpp_nlp_node.cpp)
 
-## Rename C++ executable without prefix
-## The above recommended prefix causes long target names, the following renames the
-## target back to the shorter version for ease of user use
-## e.g. "rosrun someones_pkg node" instead of "rosrun someones_pkg someones_pkg_node"
-# set_target_properties(${PROJECT_NAME}_node PROPERTIES OUTPUT_NAME node PREFIX "")
 
-## Add cmake target dependencies of the executable
-## same as for the library above
-# add_dependencies(${PROJECT_NAME}_node ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
-
-## Specify libraries to link a library or executable target against
-# target_link_libraries(${PROJECT_NAME}_node
-#   ${catkin_LIBRARIES}
-# )
 
 #############
 ## Install ##
 #############
 
-# all install targets should use catkin DESTINATION variables
-# See http://ros.org/doc/api/catkin/html/adv_user_guide/variables.html
+# Mark library for installation
+install(
+  TARGETS ${PROJECT_NAME} ${IPOPT_ADAPTER_LIB} ${SNOPT_ADAPTER_LIB}
+  ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
+  LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
+  RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
+)
 
-## Mark executable scripts (Python etc.) for installation
-## in contrast to setup.py, you can choose the destination
-# install(PROGRAMS
-#   scripts/my_python_script
-#   DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
-# )
+# Mark header files for installation
+install(
+  DIRECTORY include/${PROJECT_NAME}/
+  DESTINATION ${CATKIN_PACKAGE_INCLUDE_DESTINATION}
+  FILES_MATCHING PATTERN "*.h"
+)
 
-## Mark executables and/or libraries for installation
-# install(TARGETS ${PROJECT_NAME} ${PROJECT_NAME}_node
-#   ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
-#   LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
-#   RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
-# )
-
-## Mark cpp header files for installation
-# install(DIRECTORY include/${PROJECT_NAME}/
-#   DESTINATION ${CATKIN_PACKAGE_INCLUDE_DESTINATION}
-#   FILES_MATCHING PATTERN "*.h"
-#   PATTERN ".svn" EXCLUDE
-# )
-
-## Mark other files for installation (e.g. launch and bag files, etc.)
-# install(FILES
-#   # myfile1
-#   # myfile2
-#   DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
-# )
 
 #############
 ## Testing ##
