--- a/xpp_solve/CMakeLists.txt
+++ b/xpp_solve/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 2.8.3)
 project(xpp_solve)
 
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wfatal-errors -std=c++11")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wfatal-errors -std=c++14")
 
 find_package(catkin REQUIRED)
 find_package(Eigen3 REQUIRED)
@@ -73,6 +73,7 @@ include_directories(
 add_library(${PROJECT_NAME}
   src/nlp.cc
   src/composite.cc
+  src/leaves.cc
   src/linear_constraint.cc
   src/soft_constraint.cc
 )
