--- a/opt_solve/CMakeLists.txt
+++ b/opt_solve/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 2.8.3)
-project(xpp_solve)
+project(opt_solve)
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wfatal-errors -std=c++14")
 
