--- a/xpp_opt/CMakeLists.txt
+++ b/xpp_opt/CMakeLists.txt
@@ -4,7 +4,7 @@ project(xpp_opt)
 
 find_package(catkin REQUIRED COMPONENTS
   xpp_states
-  xpp_solve
+  opt_solve
 )
 
 find_package(Eigen3 REQUIRED)
@@ -28,7 +28,7 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wfatal-errors -std=c++14")
 catkin_package(
   INCLUDE_DIRS include
   LIBRARIES ${PROJECT_NAME}
-  CATKIN_DEPENDS xpp_solve
+  CATKIN_DEPENDS opt_solve
   DEPENDS
 )
 
