add observer pattern (spline observes node_values and contact_schedule).

--- a/towr/CMakeLists.txt
+++ b/towr/CMakeLists.txt
@@ -75,6 +75,8 @@ add_library(${PROJECT_NAME}
   src/node_cost.cc
   src/phase_nodes.cc
   src/spline.cc
+  src/nodes_observer.cc
+  src/contact_schedule_observer.cc
   src/spline_holder.cc
   src/angular_state_converter.cc
 #  src/base_motion.cc
