Squashed commit of the following:
commit 0ca880517f236d286b6ffa5e01c911fc5a2fccf4
Author: Alexander Winkler <winklera@ethz.ch>
Date:   Sat Jan 13 12:16:59 2018 +0100

    completely removed traces of xpp dependency in towr

commit 31adfac873a7dd3c64050c1728543240c64f58ea
Author: Alexander Winkler <winklera@ethz.ch>
Date:   Sat Jan 13 11:27:20 2018 +0100

    cleaned and documented towr interface

commit c2b70542bd89586364dfb76b8c54873f0b3fd598
Author: Alexander Winkler <winklera@ethz.ch>
Date:   Fri Jan 12 19:21:15 2018 +0100

    fully removed xpp_states dependency

commit f71530cf49f4931eaaa1fb1d369127d8babe3b7e
Author: Alexander Winkler <winklera@ethz.ch>
Date:   Fri Jan 12 18:48:28 2018 +0100

    add files/classes used from xpp_states

commit bf7b1b4f5020d30afae03643934cce83f4831114
Author: Alexander Winkler <winklera@ethz.ch>
Date:   Fri Jan 12 16:21:31 2018 +0100

    started removing xpp_dependencies from robot model

commit ce0646369d5e8e6db7e5d2f0dad9653357afad67
Author: Alexander Winkler <winklera@ethz.ch>
Date:   Fri Jan 12 15:29:16 2018 +0100

    remove xpp states from towr interface

--- a/towr/CMakeLists.txt
+++ b/towr/CMakeLists.txt
@@ -3,7 +3,7 @@ cmake_minimum_required(VERSION 2.8)
 project(towr)
 
 find_package(catkin REQUIRED COMPONENTS
-  xpp_states
+#  xpp_states
   ifopt
 )
 
@@ -70,6 +70,7 @@ add_library(${PROJECT_NAME}
 #  src/contact_constraints.cc
 #  src/contact_timings.cc
   # body motion
+  src/state.cc
   src/polynomial.cc
   src/node_variables.cc
   src/phase_nodes.cc
