add license to header and sources

--- a/towr/CMakeLists.txt
+++ b/towr/CMakeLists.txt
@@ -2,16 +2,8 @@
 cmake_minimum_required(VERSION 2.8)
 project(towr)
 
-find_package(catkin REQUIRED COMPONENTS
-#  xpp_states
-  ifopt
-)
-
+find_package(catkin REQUIRED COMPONENTS ifopt)
 find_package(Eigen3 REQUIRED)
-#find_package(GTest)
-
-
-
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wfatal-errors -std=c++11")
 
@@ -37,21 +29,7 @@ include_directories(
   ${catkin_INCLUDE_DIRS}
 )
 
-## General library for robot state interfaces used by many packages
-## TODO: Find way to make other packages use this library without needing
-## to install IPOPT, SNOPT
-#add_library(${STATES_LIB}
-#  src/state.cc
-#  src/robot_state_cartesian.cc
-#)
-#target_link_libraries(${STATES_LIB}
-#  ${catkin_LIBRARIES}
-#)
 
-
-
-# the specific motion optimization problem for legged robots
-# only packages that actually want to implement the optimization problem need this
 add_library(${PROJECT_NAME}
   src/towr.cc
   src/nlp_factory.cc
@@ -62,10 +40,6 @@ add_library(${PROJECT_NAME}
   src/swing_constraint.cc
   src/force_constraint.cc
   src/total_duration_constraint.cc
-  #
-#  src/contact_constraints.cc
-#  src/contact_timings.cc
-  # body motion
   src/state.cc
   src/polynomial.cc
   src/node_variables.cc
@@ -77,31 +51,12 @@ add_library(${PROJECT_NAME}
   src/contact_schedule_observer.cc
   src/spline_holder.cc
   src/angular_state_converter.cc
-#  src/base_motion.cc
-  
-  # these could go back in sometime
-#  src/linear_spline_equations.cc
-#  src/polynomial_cost.cc
-
-  # endeffector motion
-  #src/ee_phase_motion.cc
-  #src/ee_motion.cc
-  #src/endeffectors_motion.cc
-#  src/endeffectors_force.cc
-#  src/ee_force.cc
   src/contact_schedule.cc
-  # system dynamics
   src/dynamic_model.cc
-#  src/lip_model.cc
   src/centroidal_model.cc
   src/dynamic_constraint.cc
-  # kinematic
   src/range_of_motion_constraint.cc
-#  src/polygon_center_constraint.cc
-  #src/foothold_constraint.cc
-  # robot specific info
   src/optimization_parameters.cc
-  # generic classes
   src/linear_constraint.cc
   src/soft_constraint.cc
 )   
