--- a/towr/package.xml
+++ b/towr/package.xml
@@ -1,48 +1,19 @@
 <?xml version="1.0"?>
 <package format="2">
   <name>towr</name>
-  <version>0.0.0</version>
-  <description>Trajectory Optimizer for walking robots</description>
+  <version>1.0.0</version>
+  <description>
+    Trajectory Optimizer for walking robots (TOWR).
+  </description>
 
-  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
-  <!-- Example:  -->
-  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
-  <maintainer email="winklera@todo.todo">winklera</maintainer>
-
-
-  <!-- One license tag required, multiple allowed, one license per tag -->
-  <!-- Commonly used license strings: -->
-  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
-  <license>TODO</license>
-
-
-  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
-  <!-- Optional attribute type can be: website, bugtracker, or repository -->
-  <!-- Example: -->
-  <!-- <url type="website">http://wiki.ros.org/hyqb_controller</url> -->
-
-
-  <!-- Author tags are optional, mutiple are allowed, one per tag -->
-  <!-- Authors do not have to be maintianers, but could be -->
-  <!-- Example: -->
-  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->
-
-
-  <!-- The *_depend tags are used to specify dependencies -->
-  <!-- Dependencies can be catkin packages or system dependencies -->
-  <!-- Examples: -->
-  <!-- Use build_depend for packages you need at compile time: -->
-  <!--   <build_depend>message_generation</build_depend> -->
-  <!-- Use buildtool_depend for build tool packages: -->
-  <!--   <buildtool_depend>catkin</buildtool_depend> -->
-  <!-- Use run_depend for packages you need at runtime: -->
-  <!--   <run_depend>message_runtime</run_depend> -->
-  <!-- Use test_depend for packages you need only for testing: -->
-  <!--   <test_depend>gtest</test_depend> -->
-  <buildtool_depend>catkin</buildtool_depend>
+  <author email="winklera@ethz.ch">Alexander W. Winkler</author>
+  <maintainer email="winklera@ethz.ch">Alexander W. Winkler</maintainer>
+  <license>BSD</license>
   
-  <!--  <depend>xpp_states</depend>   -->
+  <url type="website">http://github.com/ethz-adrl/towr</url>
+  <url type="bugtracker">http://github.com/ethz-adrl/towr/issues</url>
+
+  <buildtool_depend>catkin</buildtool_depend>
   <depend>ifopt</depend>
   
-    
 </package>
